--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   /* width: 70%; */
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 50px;
   margin: 10px 150px;
 }
 .site-name {
@@ -20,7 +20,7 @@ body {
 .blog-section {
   width: 450px;
   background-color: white;
-  box-shadow: 4px 4px 4px ;
+  box-shadow: 0 0 10px 5px #ff00ff, 0 0 20px 10px #00ffff;
   padding-left:15px ;
   padding-right: 15px;
 }
@@ -63,7 +63,7 @@ nav ul li a {
 
 .highlights-section{
   background-color: white;
-  box-shadow: 4px 4px ;
+  box-shadow: 0 0 10px 5px #ff00ff, 0 0 20px 10px #00ffff;
   border:1px solid;
   margin-top: 15px;
   margin-left: -80px;
